--- a/registrationForm.html
+++ b/registrationForm.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- creating registration form using bootstrap -->
 <html>
   <head>
     <meta charset="utf-8">
@@ -23,13 +24,13 @@
         </div>
         <div class="col-md-6">
           <label class="text-center text--secondary"> firstname* </label>
-          <input id="firstname" class="input text-left text--secondary" type="text" placeholder="firstname*" onchange="alertId(firstname)">
+          <input id="firstname" class="input input-sm text-left text--secondary" type="text" placeholder="firstname*" onclick="alertId(id)" onchange="hideAlertDiv(id)">
           <div id="firstnameDiv" class="alert alert-warning hide">enter firstname </div>
         </div>
         <div class="col-md-6">
           <label class="text-center text--secondary"> lastname* </label>
-          <input id="lastname" class="input text-left text--secondary" type="text" placeholder="lastname*" onchange="alertId(lastname)">
-          <div id="last-childnameDiv" class="alert alert-warning hide">enter lastname </div>
+          <input id="lastname" class="input input-sm text-left text--secondary" type="text" placeholder="lastname*" onclick="alertId(id)" onchange="hideAlertDiv(id)">
+          <div id="lastnameDiv" class="alert alert-warning hide">enter lastname </div>
         </div>
         <div class="col-md-12">
           <br>
@@ -41,44 +42,44 @@
           </div>
           <div class="input-icon input-icon--right">
             <i class="fa fa-calendar input-icon__icon"></i>
-            <input id="dateofbirth" type="date" class="input text-left text--secondary" placeholder="date of birth*" onchange="alertId(dateofbirth)"/>
+            <input id="dateofbirth" type="date" class="input text-left input-sm text--secondary" placeholder="MM/DD/YYYY" onclick="alertId(id)" onchange="hideAlertDiv(id); getAge()"/>
             <div id="dateofbirthDiv" class="alert alert-warning hide">enter date of birth </div>
           </div>
         </div>
         <div class="col-md-6">
           <label class="text-center text--secondary"> Age </label>
-          <input class="input input--disabled text-left" type="text" placeholder="age">
+          <input id="age" class="input input--disabled input-sm text-left" type="text" placeholder="age">
         </div>
         <div class="col-md-12">
           <br>
         </div>
         <div class="col-md-6">
           <label class="text-center text--secondary"> Mobile no* </label>
-          <input id="mobileno" class="input text-left text--secondary" type="text" placeholder="mobileno*" onchange="alertId(mobileno)">
+          <input id="mobileno" class="input input-sm text-left text--secondary" type="text" placeholder="mobileno*" onclick="alertId(id)" onchange="hideAlertDiv(id); verifyMobileno()">
           <div id="mobilenoDiv" class="alert alert-danger hide">enter mobile no of 10 digits</div>
-          <div id="mobilenowarnDiv" class="alert alert-warning hide">enter valid mobile no </div>
+          <div id="mobilenowarnDiv" class="alert alert-info hide">enter valid mobile no </div>
         </div>
         <div class="col-md-6">
           <label class="text-center text--secondary"> Gender </label>
           <br>
-          <input type="radio" name="gender" value="male"> Male
-          <input type="radio" name="gender" value="female"> Female
+          <input id="male" type="radio" name="gender" value="male"> Male
+          <input id="female" type="radio" name="gender" value="female"> Female
         </div>
         <div class="col-md-12">
           <br>
         </div>
         <div class="col-md-4">
           <label class="text-center text--secondary"> City* </label>
-          <input id="city" class="input text-left text--secondary" type="text" placeholder="City*" onchange="alertId(city)">
+          <input id="city" class="input input-sm text-left text--secondary" type="text" placeholder="City*" onclick="alertId(id)" onchange="hideAlertDiv(id)">
           <div id="cityDiv" class="alert alert-warning hide">enter city </div>
         </div>
         <div class="col-md-4">
           <label class="text-center text--secondary"> State* </label>
-          <select class="input"></select>
+          <select class="input input-sm"></select>
         </div>
         <div class="col-md-4">
           <label class="text-center text--secondary"> Country* </label>
-          <select class="input"></select>
+          <select class="input input-sm"></select>
         </div>
       </div>
       <div class="col-md-6">
@@ -93,14 +94,14 @@
           </div>
           <div class="input-icon input-icon--right">
             <i class="fa fa-envelope input-icon input-icon__icon"></i>
-            <input id="email" class="input text-left text--secondary" type="text" placeholder="Email*" onchange="alertId(email)">
+            <input id="email" class="input input-sm text-left text--secondary" type="text" placeholder="Email*" onclick="alertId(id)" onchange="hideAlertDiv(id); verifyEmail()">
             <div id="emailDiv" class="alert alert-danger hide">enter email </div>
-            <div id="emailwarnDiv" class="alert alert-warning hide">enter valid email </div>
+            <div id="emailwarnDiv" class="alert alert-info hide">enter valid email </div>
           </div>
         </div>
         <div class="col-md-6">
           <label class="text-center text--secondary"> verification code </label>
-          <input id="verificationcode" class="input text-left text--secondary" type="text" placeholder="verification code" onchange="alertId(verificationcode)">
+          <input id="verificationcode" class="input input-sm text-left text--secondary" type="text" placeholder="verification code" onclick="alertId(id)" onchange="hideAlertDiv(id)">
           <div id="verificationcodeDiv" class="alert alert-warning hide">enter verification code </div>
         </div>
         <div class="col-md-12">
@@ -113,8 +114,8 @@
           </div>
           <div class="input-icon input-icon--right">
             <i class="fa fa-user input-icon input-icon__icon"></i>
-            <input id="username" class="input text-left text--secondary" type="text" placeholder="Username*" onchange="alertId(username)">
-            <div id="useernameDiv" class="alert alert-warning hide">enter username </div>
+            <input id="username" class="input input-sm text-left text--secondary" type="text" placeholder="Username*" onclick="alertId(id)" onchange="hideAlertDiv(id)">
+            <div id="usernameDiv" class="alert alert-warning hide">enter username </div>
           </div>
         </div>
         <div class="col-md-6">
@@ -132,9 +133,9 @@
           </div>
           <div class="input-icon input-icon--right">
             <i class="fa fa-lock input-icon input-icon__icon"></i>
-            <input id="password" class="input text-left text--secondary" type="password" placeholder="pasword*" onchange="alertId(password)">
+            <input id="password" class="input input-sm text-left text--secondary" type="password" placeholder="password*" onclick="alertId(id)" onchange="hideAlertDiv(id)">
             <div id="passwordDiv" class="alert alert-danger hide">enter password </div>
-            <div id="passwordwarnDiv" class="alert alert-warning hide">password length must be more 6 characters </div>
+            <div id="passwordwarnDiv" class="alert alert-info hide">password length must be more 6 characters </div>
           </div>
         </div>
         <div class="col-md-6">
@@ -144,8 +145,9 @@
           </div>
           <div class="input-icon input-icon--right">
             <i class="fa fa-lock input-icon input-icon__icon"></i>
-            <input id="retypepassword" class="input input--alert text-left text--secondary" type="password" placeholder="re-type pasword*" onchange="alertId(retypepassword)">
+            <input id="retypepassword" class="input input-sm input--alert text-left text--secondary" type="password" placeholder="re-type password*" onclick="alertId(id)" onchange="hideAlertDiv(id); verifyPassword()">
             <div id="retypepasswordDiv" class="alert alert-danger hide">re-type password </div>
+            <div id="retypepasswordwarnDiv" class="alert alert-info hide">re enter same password </div>
           </div>
         </div>
         <div class="col-md-12">
@@ -158,7 +160,7 @@
           <br>
         </div>
         <div class="col-md-12">
-            <input class="left" type="checkbox"> I agree the terms of services and privacy policy
+            <input id="agreecheckbox" class="left" type="checkbox"> I agree the terms of services and privacy policy
         </div>
       </div>
       <div class="col-md-12">
@@ -167,10 +169,12 @@
       <div class="col-md-12">
         <br>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-8">
+      </div>
+      <div class="col-md-2">
         <button class="btn-default btn-lg btn--round middle"> Cancel </button>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-2">
         <button class="btn-primary btn-lg btn--round middle" onclick="popup()"> Create </button>
       </div>
     </div>
